--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,13 @@ body{
   background-size: cover;
   background-position: center;
 }
-
+.card{
+  background-color: rgba(11, 12, 12, 0);
+}
 .form{
   margin: auto;
   margin-top: 10px;
-  /* flex-basis: 30%; */
+  flex-basis: 100%;
   padding:5% 10%;
 }
 
